--- a/ng2-stompjs-angular7/src/app/app.component.html
+++ b/ng2-stompjs-angular7/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to !
-  </h1>
+<div style="margin: 20px">
+  <app-chat-panel></app-chat-panel>
 </div>
-<app-messages></app-messages>
