--- a/ng2-stompjs-angular7/src/styles.css
+++ b/ng2-stompjs-angular7/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+ul, ol, li {
+  list-style-type: none;
+  padding: inherit;
+  margin: inherit;
+}
+
+.chat-user-name {
+  font-weight: bold;
+}
