date/time of messages

--- a/ng2-stompjs-angular7/src/app/chat/simple-message/simple-message.component.html
+++ b/ng2-stompjs-angular7/src/app/chat/simple-message/simple-message.component.html
@@ -1,2 +1,3 @@
-<span class="chat-user-name">{{msg.user}}:</span>
+<span class="chat-dt">{{msg.dt | date :'medium'}}:</span>&nbsp;
+<span class="chat-user-name">{{msg.user}}:</span>&nbsp;
 <span class="chat-message">{{msg.msg}}</span>
