--- a/ng2-stompjs-angular7/src/app/chat/chat-panel/chat-panel.component.html
+++ b/ng2-stompjs-angular7/src/app/chat/chat-panel/chat-panel.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="stompService.active else defaultSection">
   <app-chat-connection-status [connectionStatus]="(stompService.state | async)"></app-chat-connection-status>
-  <app-messages></app-messages>
+  <app-chat-send-form [chatQueueName]="queueName"></app-chat-send-form>
+  <app-messages [receivedMessages]="receivedMessages"></app-messages>
   <div class="chat-logout-btn">
     <button (click)="logOut()">log out</button>
   </div>
