--- a/ng2-stompjs-angular7/src/app/console/console-log/console-log.component.html
+++ b/ng2-stompjs-angular7/src/app/console/console-log/console-log.component.html
@@ -2,5 +2,8 @@
   <li class="console-log-item" *ngFor="let log of logs">
     <span *ngIf="textConsoleItem(log) as textLog">{{textLog.txt}}</span>
     <span *ngIf="unknownCommandConsoleItem(log) as unk"><span class="minor">unknown command: </span>{{unk.command}}</span>
+    <span *ngIf="simpleCommandConsoleItem(log) as cmd"><span class="command">{{cmd.command}} </span>
+      <span *ngFor="let arg of cmd.args" class="arg">{{arg}} </span>
+    </span>
   </li>
 </ul>
