--- a/ng2-stompjs-angular7/src/styles.css
+++ b/ng2-stompjs-angular7/src/styles.css
@@ -3,10 +3,19 @@ body.console {
   background-color: #313131;
   color: #9dd49d;
   font-family: Consolas, monospace;
+  font-size: 1em;
 }
 
 .minor {
   color: #3b4f3b;
+}
+
+.command {
+  color: #fff77f;
+}
+
+.arg {
+  color: #c2d5c2;
 }
 
 .console-form {
@@ -20,6 +29,8 @@ body.console {
   color: inherit;
   width: 94%;
   outline: none;
+  font-family: Consolas, monospace;
+  font-size: 1em;
 }
 
 ul, ol, li {
