--- a/ng2-stompjs-angular7/src/app/console/console-log/console-log.component.html
+++ b/ng2-stompjs-angular7/src/app/console/console-log/console-log.component.html
@@ -4,7 +4,10 @@
       [@simpleFadeAnimation]="'in'"
   >
     <span *ngIf="textConsoleItem(log) as textLog">{{textLog.txt}}</span>
-    <span *ngIf="unknownCommandConsoleItem(log) as unk"><span class="minor">unknown command: </span>{{unk.command}}</span>
+    <span *ngIf="unknownCommandConsoleItem(log) as unk"><span class="minor">
+      unknown command: </span>{{unk.command}}<br/>
+      enter <span class="command">help</span> to see available commands
+    </span>
     <span *ngIf="simpleCommandConsoleItem(log) as cmd"><span class="command">{{cmd.command}} </span>
       <span *ngFor="let arg of cmd.args" class="arg">{{arg}} </span>
     </span>
